vendored_parsers/tree-sitter-astro/corpus/delimiter-stress-test-easy.txt
===============================
Delimiter stress test #1 (easy)
===============================

---
/*
---
*/
'
---
'
"
---
"
// ---
---

<html />

--------------------

(document
    (frontmatter
        (frontmatter_js_block))
    (element
        (self_closing_tag
            (tag_name))))
