vendored_parsers/tree-sitter-astro/corpus/two-elements-in-html-interpolation.txt
===
Two elements in a HTML interpolation
===

{ 
<p> it's </p>
<p> it'll </p>
}

-------

(document
  (html_interpolation
    (permissible_text)
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (permissible_text)
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (permissible_text)))
